<resources>
    <string name="app_name">College Football</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 guess buttons</string>
    <string name="conferences">Conferences</string>
    <string name="conferences_description">Conferences to include in the quiz</string>
    <string name="guess_conference">Guess the Conference</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_conference_message">One conference must be selected. Setting Big 10 as the default region.</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current school in the quiz</string>
    <string name="default_region">Big_Ten</string>
    <string name="title_activity_settings">Settings</string>
</resources>
