<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- default view in settings -->
    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_numberOfChoices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:persistent="true"
        android:defaultValue="4" />

    <!-- shows the options for the conferences -->
    <MultiSelectListPreference
        android:entries="@array/conferences_list"
        android:entryValues="@array/conferences_list"
        android:key="pref_conferencesToInclude"
        android:title="@string/conferences"
        android:summary="@string/conferences_description"
        android:persistent="true"
        android:defaultValue="@string/conferences" />


</PreferenceScreen>