<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uiowa.mdphan.collegefootball.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:id="@+id/quizLinearLayout"
    android:padding="@dimen/fab_margin">

    <!-- Progress of the quiz -->
    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/question"/>

    <!-- Shows the school picture -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/flagImageView"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/guessCountryTextView"
        android:gravity="center_horizontal"
        android:text="@string/guess_conference"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/row1LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/row2LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/row3LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/row4LinearLayout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Material.Button.Colored"
            android:textColor="@color/button_text_color"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answerTextView"
        android:gravity="center_horizontal"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold" />
</LinearLayout>
